# project-amethyst

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/migrations/: 20240904083354_add_driver_table.sql  20240904083418_add_driver_general_report_table.sql  20240904083426_add_driver_medical_report_table.sql  20240904083431_add_vehicle_table.sql  20240904083440_add_vehicle_general_report_table.sql  20240904083448_add_vehicle_inspection_report_table.sql  20240904083456_add_pickup_route_table.sql  20240904083505_add_pickup_route_general_report_table.sql  20240904083525_add_operational_log_table.sql  20240904083534_add_attendance_log_table.sql  20241008134228_alter_vehicle_report_inspection_table.sql  20241012204422_add-operational-log-to-attendance-log.sql
src-tauri/src/: main.rs  open.rs
src-tauri/src/database/: get.rs  init.rs  mod.rs  models.rs  post.rs  put.rs
src/app/: App.tsx  routes.tsx  theme.tsx
src/components/: AddressBar.tsx  AttendanceChecklistWidget.tsx  AttendanceLogTable.tsx  AttendanceLogTableCheckBox.tsx  BaseDetails.tsx  BaseForm.tsx  BaseFormTransition.tsx  BaseGallery.tsx  BaseInfoGroup.tsx  BaseInputButton.tsx  BaseInputDateField.tsx  BaseInputFileDropzone.tsx  BaseInputFileSelect.tsx  BaseInputMultiSelect.tsx  BaseInputMultiSelectItem.tsx  BaseInputTextField.tsx  BaseInputTimeField.tsx  BaseInputTopicComboBox.tsx  BaseInputTopicComboBoxList.tsx  BaseInputTopicComboBoxListItem.tsx  (+91 more)
(+315 files in other folders)
