[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }


[dependencies]
tokio = { version = "1.33.0", features = ["time", "rt", "macros"] }
serde_json = "1.0"
futures = "0.3"
serde = "1.0.203"
chrono = "0.4.38"
opener = "0.7.1"
tauri = { version = "1.7.2", features = [ "dialog-all", "path-all", "protocol-all", "fs-all" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls" , "sqlite", "derive", "macros", "time", "chrono", "migrate"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
